Bug 116243. Incorrect type conversion of Java Boolean to Javascript String. r=brendan,sr=jst.